# src/main/java/ch/bbw/m226/openapiproject/DogController.java
@@ -1,5 +1,6 @@
 package ch.bbw.m226.openapiproject;
 
+import java.math.BigDecimal;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -10,11 +11,14 @@ import javax.annotation.PostConstruct;
 
 import ch.bbw.m226.openapi.generated.controller.DogsApi;
 import ch.bbw.m226.openapi.generated.dto.DogDTO;
+import ch.bbw.m226.openapi.generated.dto.OwnerDTO;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 
+@CrossOrigin
 @Validated
 @RestController
 public class DogController implements DogsApi {
@@ -25,9 +29,9 @@ public class DogController implements DogsApi {
 
     @PostConstruct
     public void someInitialDogs() {
-        addDog(new DogDTO().breed("Golden Retriever"));
-        addDog(new DogDTO().name("Tobi"));
-        addDog(new DogDTO().name("Kira").breed("Bernersenn"));
+        addDog(new DogDTO().breed("Golden Retriever").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")));
+        addDog(new DogDTO().name("Tobi").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")));
+        addDog(new DogDTO().name("Kira").breed("Bernersenn").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")));
     }
 
 
@@ -37,6 +41,17 @@ public class DogController implements DogsApi {
         dogs.put(newDog.getId(), newDog); // yolo ignoring conflicts
         return ResponseEntity.status(HttpStatus.CREATED)
                 .body(newDog);
+    }
+
+    @Override
+    public ResponseEntity<Void> changeDogOwner(Integer dogId, OwnerDTO ownerDTO) {
+        dogs.get(dogId).setOwner(ownerDTO);
+        return null;
+    }
+
+    public ResponseEntity<DogDTO> changeDogOwner(int dogToChangeOwner, OwnerDTO newOwner) {
+        dogs.get(dogToChangeOwner).owner(newOwner);
+        return ResponseEntity.status(HttpStatus.CREATED).body(dogs.get(dogToChangeOwner));
     }
 
     @Override
